<resources>
    <string name="app_name">ScholarPlus</string>
    <string name="namaBeasiswa">Nama Beasiswa</string>
    <string name="detailBeasiswa">Detail Beasiswa</string>
    <string name="syaratBeasiswa">Syarat Beasiswa</string>
    <string name="about_me">About Me</string>
    <string name="developer">Edo Novanto - edonovanto@yahoo.co.id</string>
    <string name="detail_me">Edo Novanto has graduated from 21 senior high schools Jakarta. Then, He continued his study at Gadjah Mada University majoring in computer and Information System. He\'s really into technology. He has joined a national and international event to enhance his skills in technology. He\'s able to do data analytics, cryptography algorithm, build a website and android application, and work as a designer or movie editor.</string>
</resources>
