<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/profile"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="3dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:layout_marginBottom="8dp"
        android:textSize="17sp"
        android:gravity="center"/>

    <com.codesgood.views.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textStyle="italic"
        android:layout_marginStart="16dp"
        android:text="@string/detail_me"
        android:gravity="center"/>

</LinearLayout>