<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_gravity="">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:src="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/namaBeasiswa"
                android:layout_marginBottom="8dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detailBeasiswa"
                android:ellipsize="end"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Syarat"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/tv_syarat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/syaratBeasiswa"
                android:ellipsize="end"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/btnDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Daftar Beasiswa"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:layout_margin="10dp"/>

        </LinearLayout>



    </LinearLayout>

</ScrollView>

